# -24205---Ushakov--OOP-CPP

./: .gitignore  README.md
task-0/task-0a/: CMakeLists.txt  main.cpp  module1.cpp  module1.h  module2.cpp  module2.h  module3.h
task-0/task-0b/: CMakeLists.txt  main.cpp
task-0/task-0b/src/: ResultWriter.cpp  TextReader.cpp  WordCounter.cpp  WordCounter.h  csvwriter.cpp  csvwriter.h  filereader.cpp  filereader.h  linesplitter.cpp  linesplitter.h  main.cpp  resultwriter.cpp  resultwriter.h  splitter.cpp  splitter.h  textreader.cpp  textreader.h  wordcounter.cpp  wordcounter.h
task-0/task-0b/tests/: test_csvwriter.cpp  test_filereader.cpp  test_linesplitter.cpp  test_resultwriter.cpp  test_textreader.cpp  test_wordcounter.cpp
task-1/: CMakeLists.txt  bitarray.cpp  bitarray.h
task-1/src/: bitarray.cpp  bitarray.h  main.cpp
task-1/tests/: test_bitarray.cpp
task-2/: CMakeLists.txt
task-2/src/: filereader.cpp  filereader.h  filewritter.cpp  filewritter.h  main.cpp  parser.cpp  parser.h  presetio.cpp  presetio.h  presetregistry.cpp  presetregistry.h  render.cpp  render.h  rule.cpp  rule.h  simulator.cpp  simulator.h  stepper.cpp  stepper.h  universe.cpp  universe.h
task-2/tests/: parsertest.cpp  presetiotest.cpp  presetregistrytest.cpp  rendertest.cpp  ruletests.cpp  simulator.cpp  stepper.cpp  universetests.cpp
